data/all_generated_tests/raw_wast_tests/loop_StackCorruption_368.wast
;; 9. **Test Description:**    - Testing deep nest of loops and branching to previous levels.    - **Constraint Checked:** Correct loop label targeting and stack management through deep nesting.    - **Relation to Stack Corruption:** Understanding multi-level loop nesting can expose stack misalignment.    ```wasm    (module      (func (export "test")        (local i32)        i32.const 0        loop  ;; Loop 0          i32.const 1          loop  ;; Loop 1            local.get 0            i32.const 1            i32.add            local.set 0            local.get 0            i32.const 5            i32.eq            br_if 0 1  ;; Branch to Loop 0          end          br 0        end))    )    ```

(assert_invalid
  (module
    (func (export "test")
      (local i32)
      i32.const 0
      loop
        i32.const 1
        loop
          local.get 0
          i32.const 1
          i32.add
          local.set 0
          local.get 0
          i32.const 5
          i32.eq
          br_if 0 1
        end
        br 0
      end))
  "type mismatch"
)